fix to get all user